# mediaflow-proxy-light

./: Aptfile  Cargo.toml  Dockerfile.heroku  Procfile  app.json  heroku-deploy.sh  mkdocs.yml  rust-toolchain.toml
.github/workflows/: ci.yml  heroku-deploy.yml
docs/configuration/: toml.md
docs/usage/: forward.md  overview.md  telegram.md
src/: config.rs  main.rs
src/extractor/: factory.rs
src/extractor/hosts/: filemoon.rs  maxstream.rs  mod.rs  streamhg.rs  vidmoly.rs
src/hls/: handler.rs  manifest.rs
src/mpd/: handler.rs  processor.rs
src/proxy/: handler.rs  stream.rs
src/telegram/: handler.rs  session.rs
